--- a/buf/Dockerfile
+++ b/buf/Dockerfile
@@ -3,6 +3,7 @@ RUN apk --no-cache add curl
 
 # https://github.com/bufbuild/buf/releases
 # - publishes sha256.txt describing all assets
+# renovate: datasource=github-releases depName=bufbuild/buf versioning=semver
 ARG BUF_VERSION=v0.43.2
 ARG BUF_CHECKSUM=53933427cb5518830a3fcf11d3bd9b6e3fb36eae9086731484b8ab50630c9d09
 
