--- a/firecracker/Dockerfile
+++ b/firecracker/Dockerfile
@@ -3,6 +3,7 @@ RUN apk --no-cache add curl
 
 # https://github.com/firecracker-microvm/firecracker/releases
 # - publishes binaries, no hashes
+# renovate: datasource=github-releases depName=firecracker-microvm/firecracker versioning=semver
 ARG FIRECRACKER_VERSION=v0.23.4
 ARG FIRECRACKER_CHECKSUM=efa423041fac4d18af953a1131c70d033d98f260b2c7c4e01ddbafc9b91f85d523aeda3e21f4cd50a3d91b24a608fac37ec78d18a11bf8c003450533b68cd391
 
