--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,10 @@
     {
       "matchPackagePatterns": ["bufbuild/buf"],
       "ignoreUnstable": false
+    },
+    {
+      "matchManagers": ["regex"],
+      "pinDigests": true
     }
   ]
 }
